MacViews: Modify insertText handlers to correctly handle space key and simplify menu event dispatch.

Currently, Space key events are not being passed down the view hierarchy, since
no ui::KeyEvent is being generated for them. This CL modifies insertText: to
generate a synthetic ui::KeyEvent for character events. This allows us to
correctly handle the space (and possibly other) keys. Since we no longer call
insertText:replacementRange: from insertText:, crbug.com/617110 is also fixed.

Also, this CL removes all menu event handling from insertText:replacementRange:
since it is only invoked in case of a valid inputContext. Also, this CL adds
keyUp: to BridgedContentView, so that key-up events are passed to the Views
hierarchy.

Also checked that this causes no views_unittests regressions and that
enabled interactive_ui_tests in:
-menu_controller_interactive_uitest.cc
-menu_item_view_interactive_uitest.cc
-menu_model_adapter_test.cc
-menu_view_drag_and_drop_test.cc
still work correctly.

BUG=607429, 617110

Review-Url: https://codereview.chromium.org/2033433006
Cr-Commit-Position: refs/heads/master@{#400918}

Former-commit-id: 5c38e137d2b39cc17c828ddfb783e1842e7dd76f